
1.1.1.2
----------------------------------------------------------------------
- Add compatiblity for new  Stripe Gateway API (update from 2015-02-18)
- Fix error when paying with the Authorize.net payment gateway
- Fix an issue where a static blog-page would not display any posts
- Fix an issue with the protection shortcode so it works for users with multiple memberships

1.1.1.1
----------------------------------------------------------------------
- Make Protected Content compatible with WangGuard plugin
- Add some registration hooks for compatiblity with WordPress code

1.1.1.0
----------------------------------------------------------------------
- Fix simulation of dripped content
- Fix Protected Content section for Advanced Menu Protection rules
- Fix the User selection when manually creating a new invoice
- Fix More-Tag protection to correctly display the protection message
- Fix Media Protection settings [you might need to resave permalinks]

1.1.0.9
----------------------------------------------------------------------
- Fix bug that did not allow users to enter a limited Coupon code
- Fix simulation mode for memberships with recurring payments
- Fix small glitch in the Admin UI when Category Add-on is disabled
- Fix the "Insert Variables" dropdown in Automated Email Settings
- Fix the "More Tag" and "Comment" protection rules
- Fix an error caused by manually creating invoices
- Fix protection bug that caused protected posts to show in post-list
- Improve some descriptions in Admin Settings

1.1.0.8
----------------------------------------------------------------------
- Fix critical bug that deactivated all subscriptions for some sites
- Fix the Member Capabilities rules
- New Add-on "Category Protection" allows disabling the Category rules

1.1.0.7
----------------------------------------------------------------------
- Fix bug in dripped memberships that prevented content-revealing
- Fix bug where multiple memberships would protect each others posts
